--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,4 @@
-name: Android CI
+name: Kirio CI
 
 on:
   push:
@@ -20,6 +20,12 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Clone Repository
+    - run: git clone https://github.com/ruihq/AUMM
+    - name: setup - kirio CI
+    - run: |
+           cd $HOME
+           cd AUMM
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
