--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -21,9 +22,9 @@ jobs:
         cache: gradle
 
     - name: Clone Repository
-    - run: cd $HOME git clone https://github.com/ruihq/AUMM
-    - name: setup - kirio CI
-    - run: cd AUMM
+      run: cd $HOME && git clone https://github.com/ruihq/AUMM
+    - name: kirio CI
+      run: cd AUMM
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
